[gd_scene load_steps=6 format=3 uid="uid://bc7x4wyxclnv3"]

[ext_resource type="PackedScene" uid="uid://bphbcbja2siyf" path="res://Models/door.glb" id="1_2rtfb"]
[ext_resource type="Script" path="res://Scripts/Door.gd" id="1_rm46h"]
[ext_resource type="PackedScene" uid="uid://ft81uo6qvpnt" path="res://System/Interaction/Interactable.tscn" id="2_7ofxb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nt5l1"]
size = Vector3(0.128723, 1.06832, 0.523178)

[sub_resource type="BoxShape3D" id="BoxShape3D_mek5i"]
size = Vector3(0.128723, 1.06832, 0.523178)

[node name="Door" type="Area3D"]
script = ExtResource("1_rm46h")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.574332, 0)
shape = SubResource("BoxShape3D_nt5l1")

[node name="door" parent="." instance=ExtResource("1_2rtfb")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="Interactable" parent="." instance=ExtResource("2_7ofxb")]

[node name="CollisionShape3D" parent="Interactable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.05176e-05, 0.580692, 0.00693512)
shape = SubResource("BoxShape3D_mek5i")

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
